app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: app
  template:
    metadata:
      labels:
        name: app
    spec:
      containers:
        - envFrom:
          - configMapRef:
              name: app-configmap
          image: kkaszkiel/movies-app
          name: app
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
            limits:
              cpu: 250m
              memory: 1024Mi
