db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
     - port: 5432
  selector:
    name: db
