ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 annotations:
    cert-manager.io/cluster-issuer: letsencrypt
 name: movies-ingress
spec:
  tls:
  - hosts:
    - app.kkaszkiel.pl
    - api.kkaszkiel.pl
    secretName: tls-secret
  ingressClassName: nginx
  rules:
    - host: app.kkaszkiel.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
    - host: api.kkaszkiel.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
